proj1/tests/other-tests/oskis-angels_tests/correct/loops-for-bool.py
alltrue = [1,2]
for x in alltrue:
    x = x + 1
