proj1/tests/other-tests/oskis-angels_tests/error/list_comprehension.py
a = [x for x in (0, 2, 3)]
